--- a/about-us.html
+++ b/about-us.html
@@ -364,77 +364,93 @@
                         amet, consectetur adipiscing elit, Lorem
                         ipsum dolor sit amet, consectetur adipiscing elit,</p>
                 </div>
+                <div class="row pt-5">
+                    <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                        <div class="card">
+                            <div class="card-body d-flex flex-column p-4">
+                                <h4>Admin (Backend)</h4>
+                                <p class="text-secondary pt-4">Offering you assistance in seamlessly tracking &
+                                    monitoring
+                                    all
+                                    aspects of your grocery ordering system using mobile
+                                    application.</p>
+                                <div class="mt-auto align-self-start pt-5">
+                                    <img src="images/about-us/solutions-needs/Vector (1).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector (2).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                        alt="not-found">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                        <div class="card">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Order Receiving App (Single/Multiple Shops)</h4>
+                                <p class="text-secondary pt-4">Our innovative grocery online ordering system app is
+                                    designed
+                                    to
+                                    help you take care of single as well as multiple shops
+                                    without any fretting.</p>
+                                <div class="mt-auto align-self-start pt-5">
+                                    <img src="images/about-us/solutions-needs/Vector (1).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector (2).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                        alt="not-found">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                        <div class="card">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Customers (Customer Frontend)</h4>
+                                <p class="text-secondary pt-4">Offering platform-specific online grocery ordering app
+                                    for
+                                    Apple,
+                                    Android & Web, making sure your customers can place
+                                    orders with you however they like..</p>
+                                <div class="mt-auto align-self-start pt-5">
+                                    <img src="images/about-us/solutions-needs/Vector (1).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector (2).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                        alt="not-found">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                        <div class="card">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Delivery App (Delivery Staff Management)</h4>
+                                <p class="text-secondary pt-4">Handing you over with the best grocery delivery
+                                    management
+                                    software solution, so that your customers can always count on
+                                    you for timely deliveries.</p>
+                                <div class="mt-auto align-self-start pt-5">
+                                    <img src="images/about-us/solutions-needs/Vector (1).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector (2).png"
+                                        class="img-fluid soltion-icon" alt="not-found">
+                                    <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                        alt="not-found">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 text-center">
+                    <h1><span class="fw-bold green-text">Impressive!</span> Right?</h1>
+                    <p class="fs-1">You can order your custom Apps if you want to go beyond these options.</p>
+                    <button class="btn green-bg mt-5">Contact Us</button>
+                </div>
             </div>
-            <div class="row pt-5">
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Admin (Backend)</h4>
-                        <p class="text-secondary">Enables you to keep check on every aspect of your online ordering
-                            system in a seamless
-                            manner.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Single / Multiple Outlets (Order Receiving App).</h4>
-                        <p class="text-secondary">Helps manage online ordering system if you have more than one outlet,
-                            individually as well as collectively.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Customers (Customer Frontend)</h4>
-                        <p class="text-secondary">Custom designed apps for specific platforms (desktop, Apple, Android),
-                            ensuring your customers the quickest & easiest
-                            way of placing orders.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Delivery Staff (Delivery App)</h4>
-                        <p class="text-secondary">Because the survival of a small business is hard nowadays if you don’t
-                            have a prompt online food delivery system.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 text-center">
-                <h1><span class="fw-bold green-text">Impressive!</span> Right?</h1>
-                <p class="fs-1">You can order your custom Apps if you want to go beyond these options.</p>
-                <button class="btn green-bg mt-5">Contact Us</button>
-            </div>
-        </div>
     </section>
     <!----------------------------- All of Your Needs Section End---------------------------------->
 
