--- a/our-product.html
+++ b/our-product.html
@@ -457,69 +457,78 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Admin (Backend)</h4>
-                        <p class="text-secondary pt-4">Enables you to keep check on every aspect of your online ordering
-                            system in a seamless
-                            manner.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column p-4">
+                            <h4>Admin (Backend)</h4>
+                            <p class="text-secondary pt-4">Offering you assistance in seamlessly tracking & monitoring
+                                all
+                                aspects of your grocery ordering system using mobile
+                                application.</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Order Receiving App (Single/Multiple Shops)</h4>
-                        <p class="text-secondary pt-4">Helps manage online ordering system if you have more than one
-                            outlet,
-                            individually as well as collectively.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column">
+                            <h4>Order Receiving App (Single/Multiple Shops)</h4>
+                            <p class="text-secondary pt-4">Our innovative grocery online ordering system app is designed
+                                to
+                                help you take care of single as well as multiple shops
+                                without any fretting.</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Customers (Customer Frontend)</h4>
-                        <p class="text-secondary pt-4">Custom designed apps for specific platforms (desktop, Apple,
-                            Android),
-                            ensuring your customers the quickest & easiest
-                            way of placing orders.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column">
+                            <h4>Customers (Customer Frontend)</h4>
+                            <p class="text-secondary pt-4">Offering platform-specific online grocery ordering app for
+                                Apple,
+                                Android & Web, making sure your customers can place
+                                orders with you however they like..</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Delivery App (Delivery Staff Management)</h4>
-                        <p class="text-secondary pt-4">Handing you over with the best grocery delivery management
-                            software
-                            solution, so that your customers can always count on
-                            you for timely deliveries.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column">
+                            <h4>Delivery App (Delivery Staff Management)</h4>
+                            <p class="text-secondary pt-4">Handing you over with the best grocery delivery management
+                                software solution, so that your customers can always count on
+                                you for timely deliveries.</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -643,9 +652,10 @@
     <!--------------------------- Apps Provided Section start---------------------------------->
     <section class="container-fluid py-5 d-flex justify-content-center">
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
-            <div class="row justify-content-between align-items-center"> 
+            <div class="row justify-content-between align-items-center">
                 <div class="col-12 text-center pb-3">
-                    <h1 class="display-2 position-relative pb-5"><span class="green-text fw-bold">Demo Credentials </span>for our Apps</h1>
+                    <h1 class="display-2 position-relative pb-5"><span class="green-text fw-bold">Demo Credentials
+                        </span>for our Apps</h1>
                     <span class="position-absolute" style="top: 112px; right: 268px;"><img
                             src="images/about-us/businesses-fajira/Layer_1.png" class="img-fluid"
                             alt="not-found"></span>
@@ -655,69 +665,78 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Admin (Backend)</h4>
-                        <p class="text-secondary pt-4">Enables you to keep check on every aspect of your online ordering
-                            system in a seamless
-                            manner.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column p-4">
+                            <h4>Admin (Backend)</h4>
+                            <p class="text-secondary pt-4">Offering you assistance in seamlessly tracking & monitoring
+                                all
+                                aspects of your grocery ordering system using mobile
+                                application.</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Order Receiving App (Single/Multiple Shops)</h4>
-                        <p class="text-secondary pt-4">Helps manage online ordering system if you have more than one
-                            outlet,
-                            individually as well as collectively.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column">
+                            <h4>Order Receiving App (Single/Multiple Shops)</h4>
+                            <p class="text-secondary pt-4">Our innovative grocery online ordering system app is designed
+                                to
+                                help you take care of single as well as multiple shops
+                                without any fretting.</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Customers (Customer Frontend)</h4>
-                        <p class="text-secondary pt-4">Custom designed apps for specific platforms (desktop, Apple,
-                            Android),
-                            ensuring your customers the quickest & easiest
-                            way of placing orders.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column">
+                            <h4>Customers (Customer Frontend)</h4>
+                            <p class="text-secondary pt-4">Offering platform-specific online grocery ordering app for
+                                Apple,
+                                Android & Web, making sure your customers can place
+                                orders with you however they like..</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-3 py-3" style="display: table;">
-                    <div class="card-solution">
-                        <h4>Delivery App (Delivery Staff Management)</h4>
-                        <p class="text-secondary pt-4">Handing you over with the best grocery delivery management
-                            software
-                            solution, so that your customers can always count on
-                            you for timely deliveries.</p>
-                        <div>
-                            <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                alt="not-found">
-                            <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                alt="not-found">
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-body d-flex flex-column">
+                            <h4>Delivery App (Delivery Staff Management)</h4>
+                            <p class="text-secondary pt-4">Handing you over with the best grocery delivery management
+                                software solution, so that your customers can always count on
+                                you for timely deliveries.</p>
+                            <div class="mt-auto align-self-start pt-5">
+                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                    alt="not-found">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -725,7 +744,6 @@
         </div>
     </section>
     <!----------------------------- Apps Provided Section End---------------------------------->
-
     <!---------------------  Subscribe Newsletter-start ------------------->
     <section class="container-fluid py-5 d-flex justify-content-center">
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
