--- a/our-product.html
+++ b/our-product.html
@@ -458,7 +458,7 @@
             </div>
             <div class="row pt-5">
                 <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
+                    <div class="card card-solution">
                         <div class="card-body d-flex flex-column p-4">
                             <h4>Admin (Backend)</h4>
                             <p class="text-secondary pt-4">Offering you assistance in seamlessly tracking & monitoring
@@ -466,67 +466,65 @@
                                 aspects of your grocery ordering system using mobile
                                 application.</p>
                             <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319179.png" class="img-fluid"
                                     alt="not-found">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column">
+                    <div class="card card-solution">
+                        <div class="card-body d-flex flex-column p-4 ">
                             <h4>Order Receiving App (Single/Multiple Shops)</h4>
                             <p class="text-secondary pt-4">Our innovative grocery online ordering system app is designed
                                 to
                                 help you take care of single as well as multiple shops
                                 without any fretting.</p>
                             <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319179.png" class="img-fluid"
                                     alt="not-found">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column">
+                    <div class="card card-solution">
+                        <div class="card-body d-flex flex-column p-4 ">
                             <h4>Customers (Customer Frontend)</h4>
                             <p class="text-secondary pt-4">Offering platform-specific online grocery ordering app for
                                 Apple,
                                 Android & Web, making sure your customers can place
                                 orders with you however they like..</p>
                             <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319179.png" class="img-fluid"
                                     alt="not-found">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column">
+                    <div class="card card-solution">
+                        <div class="card-body d-flex flex-column p-4 ">
                             <h4>Delivery App (Delivery Staff Management)</h4>
                             <p class="text-secondary pt-4">Handing you over with the best grocery delivery management
                                 software solution, so that your customers can always count on
                                 you for timely deliveries.</p>
                             <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
                             </div>
                         </div>
@@ -659,82 +657,76 @@
                     <span class="position-absolute" style="top: 112px; right: 268px;"><img
                             src="images/about-us/businesses-fajira/Layer_1.png" class="img-fluid"
                             alt="not-found"></span>
-                    <p class="para-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor sit
-                        amet, consectetur adipiscing elit, Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit,</p>
+                    <p class="para-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut velit a nisl
+                        euismod imperdiet id id nunc. Nullam
+                        bibendum enim vel leo tristique, nec iaculis orci molestie.</p>
                 </div>
             </div>
             <div class="row pt-5">
                 <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column p-4">
-                            <h4>Admin (Backend)</h4>
-                            <p class="text-secondary pt-4">Offering you assistance in seamlessly tracking & monitoring
-                                all
-                                aspects of your grocery ordering system using mobile
-                                application.</p>
-                            <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                    <div class="card card-solution border-0 bg-white">
+                        <div class="card-body d-flex flex-column p-4 text-center align-items-center">
+                            <img src="images/our-products/apps-icons (4).png" class="img-fluid apps-icons"
+                                alt="not-found">
+                            <h4>Website</h4>
+                            <p class="text-secondary">User/Admin Website</p>
+                            <p>demo@grocery.fajira.com
+                                123456</p>
+                            <div class="mt-auto align-self-center pt-5">
+                                <img src="images/about-us/solutions-needs/web.png" class="img-fluid" alt="not-found">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch justify-content-center">
+                    <div class="card card-solution border-0 bg-white">
+                        <div class="card-body d-flex flex-column p-4 text-center align-items-center">
+                            <img src="images/our-products/apps-icons (1).png" class="img-fluid apps-icons"
+                                alt="not-found">
+                            <h4>User App</h4>
+                            <p class="text-secondary">Android/IOS</p>
+                            <p>demouser@fajira.com
+                                123456</p>
+                            <div class="mt-auto align-self-center pt-5">
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3 d-flex align-items-stretch justify-content-center">
+                    <div class="card card-solution border-0 bg-white">
+                        <div class="card-body d-flex flex-column p-4 text-center align-items-center">
+                            <img src="images/our-products/apps-icons (3).png" class="img-fluid apps-icons"
+                                alt="not-found">
+                            <h4>Rider App</h4>
+                            <p class="text-secondary">Android/IOS</p>
+                            <p>demorider@fajira.com
+                                123456</p>
+                            <div class="mt-auto align-self-center pt-5">
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
+                                    alt="not-found">
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column">
-                            <h4>Order Receiving App (Single/Multiple Shops)</h4>
-                            <p class="text-secondary pt-4">Our innovative grocery online ordering system app is designed
-                                to
-                                help you take care of single as well as multiple shops
-                                without any fretting.</p>
-                            <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
+                    <div class="card card-solution border-0 bg-white">
+                        <div class="card-body d-flex flex-column p-4 text-center align-items-center">
+                            <img src="images/our-products/apps-icons (2).png" class="img-fluid apps-icons"
+                                alt="not-found">
+                            <h4>Admin App</h4>
+                            <p class="text-secondary">Android/IOS</p>
+                            <p>demo@grocery.fajira.com
+                                123456</p>
+                            <div class="mt-auto align-self-center pt-5">
+                                <img src="images/about-us/solutions-needs/Group 427319177.png" class="img-fluid"
                                     alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column">
-                            <h4>Customers (Customer Frontend)</h4>
-                            <p class="text-secondary pt-4">Offering platform-specific online grocery ordering app for
-                                Apple,
-                                Android & Web, making sure your customers can place
-                                orders with you however they like..</p>
-                            <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column">
-                            <h4>Delivery App (Delivery Staff Management)</h4>
-                            <p class="text-secondary pt-4">Handing you over with the best grocery delivery management
-                                software solution, so that your customers can always count on
-                                you for timely deliveries.</p>
-                            <div class="mt-auto align-self-start pt-5">
-                                <img src="images/about-us/solutions-needs/Vector (1).png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector (2).png" class="img-fluid soltion-icon"
-                                    alt="not-found">
-                                <img src="images/about-us/solutions-needs/Vector.png" class="img-fluid soltion-icon"
+                                <img src="images/about-us/solutions-needs/Group 427319178.png" class="img-fluid"
                                     alt="not-found">
                             </div>
                         </div>
