--- a/blog.html
+++ b/blog.html
@@ -211,9 +211,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (1).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-4">Oct 10,2022</p>
+                            <p class="px-3 fs-4"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-4"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -226,9 +226,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (2).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -241,9 +241,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (3).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -256,9 +256,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (4).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -271,9 +271,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (5).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -286,9 +286,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (6).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -301,9 +301,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (7).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
@@ -316,9 +316,9 @@
                     <div class="card border-0">
                         <img src="images/blog/blog (8).png" class="img-fluid" alt="not-found">
                         <div class="d-flex pt-4">
-                            <p class="px-3">Oct 10,2022</p>
-                            <p class="px-3"><span><i class="fa-solid fa-eye"></i></span> 132</p>
-                            <p class="px-3"><span><i class="fa-solid fa-user"></i></span> Admin</p>
+                            <p class="px-3 fs-5">Oct 10,2022</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-eye"></i></span> 132</p>
+                            <p class="px-3 fs-5"><span><i class="fa-solid fa-user"></i></span> Admin</p>
                         </div>
                         <h5 class="fs-2">Lorem ipsum dolor sit amet.</h5>
                         <p class="text-secondary fs-4">Lorem ipsum dolor sit amet, const ectetur adipiscing elit. Lorem
