--- a/our-product.html
+++ b/our-product.html
@@ -258,8 +258,8 @@
                 </div>
             </div>
             <div class="row pb-lg-5">
-                <div class="col-sm-12 col-md-12 col-lg-4 py-3 px-3">
-                    <div class="card-team">
+                <div class="col-sm-12 col-md-12 col-lg-4 py-3 px-3" style="display: table;">
+                    <div class="card-team" style="display: table-cell;">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
                                 <img src="images/our-products/grocery-feacture-icons/online-shopping.png"
@@ -272,7 +272,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -286,7 +286,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -302,7 +302,7 @@
                 </div>
             </div>
             <div class="row pb-lg-5">
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -330,7 +330,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -346,7 +346,7 @@
                 </div>
             </div>
             <div class="row pb-lg-5">
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -360,7 +360,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -374,7 +374,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -390,7 +390,7 @@
                 </div>
             </div>
             <div class="row pb-lg-5">
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -404,7 +404,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
@@ -418,7 +418,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
                     <div class="card-team">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
