--- a/our-product.html
+++ b/our-product.html
@@ -190,13 +190,13 @@
                         bibendum enim vel leo tristique, nec iaculis orci molestie.</p>
                     <div class="col-10">
                         <form class=" position-relative d-block
-                                                                d-lg-flex d-md-flex mt-5" action="#" method="POST"
+                            d-lg-flex d-md-flex mt-5" action="#" method="POST"
                             data-redirecturl="#">
                             <input type="text" class=" 
                                         form-control" placeholder="Enter Phone Number"
                                 style="border: none; background-color: rgba(239, 239, 239, 1);; padding: 25px 15px;"
                                 name="#" autocomplete="off">
-                            <input type="submit" value="Request Demo" class=" btn admin-bg mt-3 mt-lg-0
+                            <input type="submit" value="Request Demo" class="green-bg btn admin-bg mt-3 mt-lg-0
                                                                     mt-md-0">
                         </form>
                     </div>
@@ -273,7 +273,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-4 px-3 py-3" style="display: table;">
-                    <div class="card-team">
+                    <div class="card-team" style="display: table-cell;">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-2">
                                 <img src="images/our-products/grocery-feacture-icons/payment.png" class="img-fluid"
